SmsSender fix